--- a/tez-ui/pom.xml
+++ b/tez-ui/pom.xml
@@ -34,6 +34,8 @@
 
     <packageManagerScript>node/yarn/dist/bin/yarn.js</packageManagerScript>
 
+    <allow-root-build>--allow-root=false</allow-root-build>
+
     <skipTests>false</skipTests>
   </properties>
 
@@ -71,6 +73,18 @@
           </plugin>
         </plugins>
       </build>
+    </profile>
+    <profile>
+      <id>allowRootBuild</id>
+      <activation>
+        <property>
+          <name>allow.root.build</name>
+          <value>true</value>
+        </property>
+      </activation>
+      <properties>
+        <allow-root-build>--allow-root=true</allow-root-build>
+      </properties>
     </profile>
   </profiles>
 
@@ -144,7 +158,7 @@
             <phase>generate-resources</phase>
             <id>bower install</id>
             <configuration>
-              <arguments>install</arguments>
+              <arguments>install ${allow-root-build}</arguments>
             </configuration>
             <goals>
               <goal>bower</goal>
