--- a/pom.xml
+++ b/pom.xml
@@ -716,7 +716,7 @@
       <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
-        <version>11.0.2</version>
+        <version>27.0-jre</version>
       </dependency>
       <dependency>
         <groupId>org.codehaus.jettison</groupId>
